--- a/src/main.css
+++ b/src/main.css
@@ -607,12 +607,40 @@ video {
   margin-top: 4rem;
 }
 
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
+.mt-12 {
+  margin-top: 3rem;
+}
+
 .flex {
   display: flex;
 }
 
 .h-screen {
   height: 100vh;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
+.h-2\/6 {
+  height: 33.333333%;
+}
+
+.h-4\/6 {
+  height: 66.666667%;
+}
+
+.h-5\/6 {
+  height: 83.333333%;
+}
+
+.h-36 {
+  height: 9rem;
 }
 
 .w-screen {
@@ -625,6 +653,14 @@ video {
 
 .grow {
   flex-grow: 1;
+}
+
+.resize-y {
+  resize: vertical;
+}
+
+.resize {
+  resize: both;
 }
 
 .flex-col {
@@ -691,6 +727,11 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .pt-16 {
