change line height

--- a/src/main.css
+++ b/src/main.css
@@ -764,6 +764,30 @@ video {
   text-transform: uppercase;
 }
 
+.leading-tight {
+  line-height: 1.25;
+}
+
+.leading-snug {
+  line-height: 1.375;
+}
+
+.leading-none {
+  line-height: 1;
+}
+
+.leading-3 {
+  line-height: .75rem;
+}
+
+.leading-7 {
+  line-height: 1.75rem;
+}
+
+.leading-10 {
+  line-height: 2.5rem;
+}
+
 .text-primary {
   --tw-text-opacity: 1;
   color: rgb(239 231 231 / var(--tw-text-opacity));
